# python_debug_helpers

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: README.md  build.yml  lint.yml  release-please.yml  test.yml
docs/: 05_ci_build_job-2026-02-06.md  05_ci_conventional_commits-2026-02-06.md  05_ci_fork_pr_mechanism-2026-02-06.md  05_ci_lint_development_log-2026-02-06.md  05_ci_lint_guide.md  05_ci_release_doctor_analysis-2026-02-06.md  05_ci_release_please_action_guide-2026-02-06.md  05_ci_release_please_explained-2026-02-06.md  05_ci_test_improvement_analysis-2026-02-06.md
examples/: test.py
scripts/: format  lint
src/debug_helpers/: __init__.py  main.py  print.py
tests/: test_example.py
