[project]
name = "debug-helpers"
version = "0.5.0"
description = "一个简单的 Python 调试辅助工具包"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Example Author", email = "309228933@qq.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/jssfy/python_debug_helpers"
Repository = "https://github.com/jssfy/python_debug_helpers"
Issues = "https://github.com/jssfy/python_debug_helpers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debug_helpers"]

# ── Ruff (linter + formatter) ──────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py39"
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "T201",  # print statements
    "T203",  # pprint statements
]
ignore = [
    "B006",  # mutable default arguments
]
unfixable = ["T201", "T203"]

[tool.ruff.lint.isort]
length-sort = true
combine-as-imports = true
known-first-party = ["debug_helpers", "tests"]

[tool.ruff.lint.per-file-ignores]
"src/debug_helpers/main.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]

# ── Pyright (static type checker) ──────────────────────────

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.9"
include = ["src"]
exclude = [".venv", ".git", "dist", "build"]

# ── MyPy (type checker) ────────────────────────────────────

[tool.mypy]
pretty = true
show_error_codes = true
python_version = "3.9"
files = ["src/"]
exclude = ["tests/", "examples/", "scripts/"]

check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
implicit_reexport = true
